Prevent label from wrapping

--- a/src/shared/styles/options-menu.css
+++ b/src/shared/styles/options-menu.css
@@ -15,6 +15,7 @@
   color: var(--color-fg-faint);
   font-weight: bold;
   margin-bottom: 0.5rem;
+  text-wrap: nowrap;
 }
 
 .menu-option-button {
